Added image section to hello-world-images branch

--- a/index.html
+++ b/index.html
@@ -4,3 +4,9 @@
 "<body><h1>Hello Git!</h1></body>" 
 "</html>" 
 "<!-- Updated via cmd -->" 
+"" 
+"<!-- Image Section -->" 
+"<div>" 
+"  <img src='image1.jpg' alt='Sample Image'>" 
+"  <p>Hello World with Images!</p>" 
+"</div>" 
